--- a/templates/mainPage.html
+++ b/templates/mainPage.html
@@ -28,6 +28,9 @@
     <form class="form" action="/submit_form" method="post">
         <label for="name">Name:</label><br>
         <input type="text" id="name" name="name"><br>
+
+        <label for="email">Email:</label><br>
+        <input type="email" id="email" name="email"><br>
         
         <label for="age">Age:</label><br>
         <input type="number" id="age" name="age"><br>
