--- a/templates/loginPage.html
+++ b/templates/loginPage.html
@@ -27,7 +27,11 @@
                         <ul>
                             <li><a href="#Skills"><button type="button">AboutUs</button></a></li>
                             <li><a href="#Contact"><button type="button">Contact</button></a></li>
-                            <li><a href="./loginPage.html"><button type="button">Admin Page</button></a></li>
+                            <li>
+                                <form action="/login_form" method="post">
+                                    <button type="submit" value="submit">Admin Page</button>
+                                </form>
+                            </li>  
                         </ul>
                     </nav>  
                 </div>
