--- a/templates/resultPage.html
+++ b/templates/resultPage.html
@@ -25,6 +25,11 @@
                         <ul>
                             <li><a href="#Skills"><button type="button">AboutUs</button></a></li>
                             <li><a href="#Contact"><button type="button">Contact</button></a></li>
+                            <li>
+                                <form action="/login_form" method="post">
+                                    <button type="submit" value="submit">Admin Page</button>
+                                </form>
+                            </li>
                         </ul>
                     </nav>  
                 </div>
@@ -32,8 +37,7 @@
         </div>
         <div class="result">
             Hello {% if gender == "male" %}sir{% else %}mam{% endif %}, {{ Name }}, 
-            you are having mental health result as {{ result }} and your atmosphere 
-            result is {{ atmospherePrediction }}.
+            {{ result }} 
         </div>
         
         <!-- footer -->
