--- a/templates/teenPage.html
+++ b/templates/teenPage.html
@@ -24,6 +24,11 @@
                         <li><a href="#Skills"><button type="button">AboutUs</button></a></li>
                         <li><a href="#Contact"><button type="button">Contact</button></a></li>
                     </ul>
+                    <li>
+                        <form action="/login_form" method="post">
+                            <button type="submit" value="submit">Admin Page</button>
+                        </form>
+                    </li>
                 </nav>  
             </div>
         </header>
