--- a/templates/mainPage.html
+++ b/templates/mainPage.html
@@ -13,7 +13,7 @@
     <![endif]-->
     <div class="container">
         <header>
-            <span class="name">SAMAM</span>
+            <span><a href="/"><button class="name" type="button">SAMAM</button></a></span>
             <div>
                 <nav>
                     <ul>
@@ -23,12 +23,7 @@
                             <form action="/login_form" method="post">
                                 <button type="submit" value="submit">Admin Page</button>
                             </form>
-                        </li>         
-                        <li>
-                            <form action="/character_form" method="post">
-                                <button type="submit" value="submit">Character Page</button>
-                            </form>
-                        </li>               
+                        </li>                  
                     </ul>
                 </nav>  
             </div>
