--- a/templates/mainPage.html
+++ b/templates/mainPage.html
@@ -2,7 +2,7 @@
 <html class="no-js">
 <head>
     <meta charset="utf-8">
-    <title>MainPage</title>
+    <title>SAMAM</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../static/mainPage.css">
