--- a/static/questions.css
+++ b/static/questions.css
@@ -1,74 +1,44 @@
-body{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin: 1rem 8rem 1rem 8rem;
-}
-.container{
-    margin-bottom: 4rem;
-}
-header{
+.QuestionsContainer{
     display: grid;
-    grid-gap: 2rem;
-    grid-template-columns: 1fr auto;
-    padding: 1rem;
+    grid-template-columns: 1fr 2fr;
+    border: 1px solid black;
+    border-radius: 10px;
+    margin: 1rem 3rem 1rem 3rem;
+    column-gap: 3rem;
 }
-header ul{
-    display: inline-flex;
-    justify-content: center ;
-    list-style: none;
-
+.questionDoc{
+    background-image: url('https://thumbs.dreamstime.com/b/male-doctor-question-mark-physician-white-uniform-standing-vector-isolated-ask-professional-medicine-occupation-157379450.jpg');
+    background-size: cover;
+    background-color: aqua;
 }
-.name{
-    font-size: 2rem;
-    font-weight:bolder;
-    color: black;
+.label2{
+    margin-bottom: 3rem;
 }
-button {
-    background-color: white;
-    color: black;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 16px;
-    transition: background-color 0.3s;
-}
-button:hover {
-    color: gray;
-}
-
-button:active {
-    color: grey;
-    margin-left: 1rem;
-}
-.info{
-    font-size: 2rem;
-    font-weight: bold;
-    margin: 2rem 4rem 2rem 4rem;
-}
-.questionForm{
-    padding: 1rem;
-    margin: 2rem 4rem 2rem 4rem;
+form{
     display: grid;
     grid-template-columns: 1fr 1fr;
-    row-gap: 1rem;
+    column-gap: 0rem;
+    margin: 0rem 4rem 0rem 1rem;
+    padding: .3rem;
+    border: none;
+    width: 80%;
 }
-label{
-    font-size: 1.5rem;
-    font-weight: bold;
-    text-align: left;
-}
-select{
-    font-size: 1rem;
-    font-weight: lighter;
-    padding: 0.5rem;
-    border-radius: 5px;
-    border: 1px solid black;
+input,button{
     width: 100%;
+    padding: .5rem;
+    margin: .3rem;
 }
-input{
-    font-size: 1rem;
-    font-weight: lighter;
-    padding: 0.5rem;
+.submit{
+    background-color: darkgray;
+    color: white;
+    font-weight: bolder;
+    font-size: 1.2rem;
+    border: none;
     border-radius: 5px;
-    border: 1px solid black;
+    width: 105%;
+    margin-bottom: 5rem;
+}
+
+.Questions{
+    
 }
