--- a/templates/adminPage.html
+++ b/templates/adminPage.html
@@ -3,15 +3,45 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
-<html>
+<html  lang="en">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>AdminPage</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="../static/questions.css">
+        <link rel="stylesheet" href="../static/mainPage.css">
         <style>
+            .accountContainer {
+                margin: 4rem;
+            }
+            .details {
+                padding: 2rem;
+            }
+            .block {
+                margin: 10px;
+            }
+            .row-3 {
+                display: flex;
+            }
+            .col-1, .col-2, .col-3 {
+                flex: 1;
+            }
+            .reports, .questions {
+                padding: 10px;
+                margin-right: 40px;
+                margin-left: 10px;
+            }
+            .row-5, .row-7 {
+                display: flex;
+            }
+            .label2 {
+                font-size: 20px;
+                font-weight: bold;
+            }
+            table{
+                width: 100%;
+            }
             th {
                 padding: 10px;
                 width: 100px;
@@ -29,127 +59,167 @@
             #addQuestionRow #newDisQuestionId {
                 width: 80%;
             }
-
         </style>
-        
     </head>
-    <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
+    <body >
 
-        <div class="container">
-            <header>
-                <span><a href="/"><button class="name" type="button">SAMAM</button></a></span>
-                <div>
-                    <nav>
-                        <ul>
-                            <li><a href="#Skills"><button type="button">AboutUs</button></a></li>
-                            <li><a href="#Contact"><button type="button">Contact</button></a></li>
-                            <li>
-                                <form action="/login_form" method="post">
-                                    <button type="submit" value="submit">Admin Page</button>
-                                </form>
-                            </li>
-                        </ul>
-                    </nav>  
+        <!-- add karla font -->
+    
+        <header>
+            <div class="inner">
+                <div class="logo"><a href="/"><img src="https://th.bing.com/th/id/OIP.LtH8efhcQndAHr5-stkRhgHaFj?rs=1&pid=ImgDetMain" alt="SAMAM Logo" title="World Wildlife Fund Logo"></a></div>
+                <div class="burger"></div>
+                <nav>
+                    <a class="active" href="#">About Us</a>
+                    <a href="#">Contact</a>
+                </nav>
+                <a href="/logout" class="donate-link">LogOut</a>
+            </div>
+        </header>
+        
+        <div class="accountContainer">
+            <div class="details">
+                <div class="label2 block row-1">Admin Session :</div><hr>
+                <div class="txt block row-2 col-1">Name : {{ user.name }}</div>
+                <div class="block row-3">
+                    <div class="txt col-1">Email : {{ user.email }}</div>
+                    <div class="txt col-2">Age : {{ user.age }}</div>
+                    <div class="txt col-3">Gender : {{ user.gender }}</div>
                 </div>
-            </header>
-        </div>    
-        <h1>Admin Page</h1>
-        <!-- Users Table -->
-        <table border="1">
-            <thead>
-                <tr>
-                    <th>ID</th>
-                    <th>Username</th>
-                    <th>Email</th>
-                    <th>Age</th>
-                    <th>Gender</th>
-                    <th>Date</th>
-                    <th>Time</th>
-                    <th>Latitude</th>
-                    <th>Longitude</th>
-                    <th>Action</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for user in users %}
-                <tr>
-                    <td>{{ user.id }}</td>
-                    <td>{{ user.username }}</td>
-                    <td>{{ user.email }}</td>
-                    <td>{{ user.age }}</td>
-                    <td>{{ user.gender }}</td>
-                    <td>{{ user.date }}</td>
-                    <td>{{ user.time }}</td>
-                    <td>{{ user.latitude }}</td>
-                    <td>{{ user.longitude }}</td>
-                    <td>
-                        <button type="button" onclick="deleteRow(this, '{{ user.id }}')">Delete</button>
-                    </td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
+                <br>
+                <div class="label2 block row-4">SAMAM Report :</div><hr>
+                <div class="block row-5">
+                    <table border="1">
+                        <thead>
+                            <tr>
+                                <th>name</th>
+                                <th>Email</th>
+                                <th>Age</th>
+                                <th>Gender</th>
+                                <th>Date</th>
+                                <th>Time</th>
+                                <th>Latitude</th>
+                                <th>Longitude</th>
+                                <th>Action</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for user in users %}
+                            <tr>
+                                <td>{{ user.name }}</td>
+                                <td>{{ user.email }}</td>
+                                <td>{{ user.age }}</td>
+                                <td>{{ user.gender }}</td>
+                                <td>{{ user.date }}</td>
+                                <td>{{ user.time }}</td>
+                                <td>{{ user.latitude }}</td>
+                                <td>{{ user.longitude }}</td>
+                                <td>
+                                    <button type="button" onclick="deleteRow(this, '{{ user.id }}')">Delete</button>
+                                </td>
+                            </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+                <br>
+                <div class="label2 block row-7">
+                    <div class="col-1">
+                        <span>Character Questions:</span>
+                        <hr style="margin-right: 3rem;">
+                    </div>
+                    <div class="col-2">
+                        <span>Disorder Questions:</span>
+                        <hr style="margin-right: 3rem;">
+                    </div>
+                </div>
+                <div class="block row-7">
+                    <div class="questions col-1">
+                        <table border="1" id="CharacterQuestionsTable">
+                            <thead>
+                                <tr>
+                                    <th>ID</th>
+                                    <th>Question</th>
+                                    <th>Action</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {% for question in CharacterQuestions %}
+                                <tr>
+                                    <td>{{ question.id }}</td>
+                                    <td>{{ question.question }}</td>
+                                    <td>
+                                        <button type="button" onclick="editQuestion(this, '{{ question.id }}','CharacterQuestionsTable')">Edit</button>
+                                    </td>    
+                                </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="questions col-2">
+                        <table border="1" id="DisorderQuestionsTable">
+                            <thead>
+                                <tr>
+                                    <th>ID</th>
+                                    <th>Question</th>
+                                    <th>Action</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {% for question in DisorderQuestions %}
+                                <tr>
+                                    <td>{{ question.id }}</td>
+                                    <td>{{ question.question }}</td>
+                                    <td>
+                                        <button type="button" onclick="editQuestion(this, '{{ question.id }}','DisorderQuestionsTable')">Edit</button>
+                                    </td>    
+                                </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>  
+        </div>
+        
 
-        <h1>Character Questions :</h1>
-        <table border="1" id="CharacterQuestionsTable">
-            <thead>
-                <tr>
-                    <th>ID</th>
-                    <th>Question</th>
-                    <th>Action</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for question in CharacterQuestions %}
-                <tr>
-                    <td>{{ question.id }}</td>
-                    <td>{{ question.question }}</td>
-                    <td>
-                        <button type="button" onclick="deleteQuestion(this, '{{ question.id }}')">Delete</button>
-                    </td>    
-                </tr>
-                {% endfor %}
-                <!-- Add a row for adding a new question -->
-                <tr id="addQuestionRow">
-                    <td><input type="text" id="newQuestionId"></td>
-                    <td><input type="text" id="newQuestionText"></td>
-                    <td><button type="button" onclick="addNewQuestion()">Add</button></td>
-                </tr>
-
-            </tbody>
-        </table>
-
-        <h1>Disorder Questions :</h1>
-        <table border="1" id="DisorderQuestionsTable">
-            <thead>
-                <tr>
-                    <th>ID</th>
-                    <th>Question</th>
-                    <th>Action</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for question in DisorderQuestions %}
-                <tr>
-                    <td>{{ question.id }}</td>
-                    <td>{{ question.question }}</td>
-                    <td>
-                        <button type="button" onclick="deleteDisQuestion(this, '{{ question.id }}')">Delete</button>
-                    </td>    
-                </tr>
-                {% endfor %}
-                <!-- Add a row for adding a new question -->
-                <tr id="addQuestionRow">
-                    <td><input type="text" id="newDisQuestionId"></td>
-                    <td><input type="text" id="newDisQuestionText"></td>
-                    <td><button type="button" onclick="addNewDisQuestion()">Add</button></td>
-                </tr>
-
-            </tbody>
-        </table>
+        
+        <footer>
+            <div class="footer">
+                <div class="row">
+                    <a href="#" title="instagram">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
+                            <path d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.9 3.9 0 0 0-1.417.923A3.9 3.9 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.9 3.9 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.9 3.9 0 0 0-.923-1.417A3.9 3.9 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599s.453.546.598.92c.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.5 2.5 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.5 2.5 0 0 1-.92-.598 2.5 2.5 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233s.008-2.388.046-3.231c.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92s.546-.453.92-.598c.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92m-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217m0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334"/>
+                        </svg>
+                    </a>
+                    <a href="#" title="Facebook">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
+                            <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951"/>
+                        </svg>
+                    </a>
+                    <a href="#" title="twitter">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-twitter-x" viewBox="0 0 16 16">
+                            <path d="M12.6.75h2.454l-5.36 6.142L16 15.25h-4.937l-3.867-5.07-4.425 5.07H.316l5.733-6.57L0 .75h5.063l3.495 4.633L12.601.75Zm-.86 13.028h1.36L4.323 2.145H2.865z"/>
+                        </svg>
+                    </a>
+                </div>
+            
+                <div class="row">
+                    <ul>
+                        <li><a href="#">Contact us</a></li>
+                        <li><a href="#">Our Services</a></li>
+                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="#">Terms & Conditions</a></li>
+                        <li><a href="#">Career</a></li>
+                    </ul>
+                </div>
+            
+                <div class="row">
+                    INFERNO Copyright © 2021 Inferno - All rights reserved || Designed By: Mahesh 
+                </div>
+            </div>
+        </footer>
         <script src="../static/script.js"></script>
-    </body>
+
+    </body>    
 </html>
