--- a/templates/account.html
+++ b/templates/account.html
@@ -11,43 +11,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="../static/mainPage.css">
-        <style>
-            .accountContainer {
-                margin: 4rem;
-            }
-            .details {
-                padding: 2rem;
-            }
-            .block {
-                margin: 10px;
-            }
-            .row-3 {
-                display: flex;
-            }
-            .col-1, .col-2, .col-3 {
-                flex: 1;
-            }
-            .reports, .graphs {
-                border: 1px solid #ccc;
-                padding: 10px;
-                margin-right: 10px;
-            }
-            .row-5, .row-6 {
-                display: flex;
-            }
-            table{
-                width: 100%;
-            }
-            th {
-                padding: 10px;
-                width: 100px;
-            }
-            tr {
-                height: 30px;  
-                text-align: center;
-            }
-
-        </style>
+        <link rel="stylesheet" href="../static/account.css">
     </head>
     <body >
 
@@ -143,16 +107,6 @@
                             <path d="M12.6.75h2.454l-5.36 6.142L16 15.25h-4.937l-3.867-5.07-4.425 5.07H.316l5.733-6.57L0 .75h5.063l3.495 4.633L12.601.75Zm-.86 13.028h1.36L4.323 2.145H2.865z"/>
                         </svg>
                     </a>
-                </div>
-            
-                <div class="row">
-                    <ul>
-                        <li><a href="#">Contact us</a></li>
-                        <li><a href="#">Our Services</a></li>
-                        <li><a href="#">Privacy Policy</a></li>
-                        <li><a href="#">Terms & Conditions</a></li>
-                        <li><a href="#">Career</a></li>
-                    </ul>
                 </div>
             
                 <div class="row">
