--- a/templates/loginPage.html
+++ b/templates/loginPage.html
@@ -17,6 +17,16 @@
                 font-size: 1rem;
                 margin-left: 2rem;
             }
+            @media only screen and (max-width: 767px)
+            {
+                header{
+                    top: 0;
+                }
+                .footer {
+                    position: fixed;
+                    bottom: 0;
+                }
+            }
         </style>
     </head>
     <body >
@@ -74,18 +84,9 @@
                     </a>
                 </div>
             
+
                 <div class="row">
-                    <ul>
-                        <li><a href="#">Contact us</a></li>
-                        <li><a href="#">Our Services</a></li>
-                        <li><a href="#">Privacy Policy</a></li>
-                        <li><a href="#">Terms & Conditions</a></li>
-                        <li><a href="#">Career</a></li>
-                    </ul>
-                </div>
-            
-                <div class="row">
-                    INFERNO Copyright © 2021 Inferno - All rights reserved || Designed By: Mahesh 
+                    SAMAM Copyright © 2024 Samam - All rights reserved || Designed By: SAMAM Team 
                 </div>
             </div>
         </footer>
