--- a/templates/mainPage.html
+++ b/templates/mainPage.html
@@ -16,6 +16,24 @@
                 padding: .5rem;
                 font-size: 1rem;
             }
+            @media only screen and (max-width: 767px)
+            {
+                form{
+                    margin: 2rem 0;
+                    display: grid;
+                    grid-template-columns: 1fr 1fr;
+                }
+                .label{
+                    font-size: 1.3rem;
+                    margin-bottom: .2rem;
+                }
+                input,select{
+                    width: 10rem;
+                    margin-bottom: .2rem;
+                    padding: .2rem;
+                }
+
+            }
         </style>
     </head>
     <body >
@@ -86,17 +104,7 @@
                 </div>
             
                 <div class="row">
-                    <ul>
-                        <li><a href="#">Contact us</a></li>
-                        <li><a href="#">Our Services</a></li>
-                        <li><a href="#">Privacy Policy</a></li>
-                        <li><a href="#">Terms & Conditions</a></li>
-                        <li><a href="#">Career</a></li>
-                    </ul>
-                </div>
-            
-                <div class="row">
-                    INFERNO Copyright © 2021 Inferno - All rights reserved || Designed By: Mahesh 
+                    Samam Copyright © 2023 Samam - All rights reserved || Designed By: SAMAM Team 
                 </div>
             </div>
         </footer>
