--- a/templates/resultPage.html
+++ b/templates/resultPage.html
@@ -17,6 +17,12 @@
                 text-align: center;
                 margin-bottom: 15%;
             }
+            @media only screen and (max-width: 767px){
+                .footer {
+                    position: fixed;
+                    bottom: 0;
+                }
+            }
         </style>
     </head>
     <body >
@@ -60,17 +66,7 @@
                         </svg>
                     </a>
                 </div>
-            
-                <div class="row">
-                    <ul>
-                        <li><a href="#">Contact us</a></li>
-                        <li><a href="#">Our Services</a></li>
-                        <li><a href="#">Privacy Policy</a></li>
-                        <li><a href="#">Terms & Conditions</a></li>
-                        <li><a href="#">Career</a></li>
-                    </ul>
-                </div>
-            
+
                 <div class="row">
                     INFERNO Copyright © 2021 Inferno - All rights reserved || Designed By: Mahesh 
                 </div>
