--- a/static/mainPage.css
+++ b/static/mainPage.css
@@ -8,13 +8,14 @@ html {
 
 body {
 	overflow-x: hidden;
+	overflow-y: hidden;
     font-family: 'Arial', serif;
 	font-size: 12px;
 	color: black;
 	letter-spacing: 1px;
 	text-decoration: none;
-	margin: 0 18px;
-	overflow:inherit;
+	margin: 0;
+	overflow:auto;
 	&.active, &:hover {
 	    color: black;
 	}
@@ -22,11 +23,9 @@ body {
 
 header {
 	display: block;
-	top: 0;
-	left: 0;
 	width: 100%;
 	height: 115px;
-	z-index: 10;
+	z-index: 0;
 	background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/123024/menutexture.png);
 	background-position: center top;
 	background-size: auto 200px;
@@ -60,7 +59,7 @@ header {
 	}
 
 	nav {
-		display: none;
+		display: block;
 
 		a {
 			font-family: 'Arial', serif;
@@ -75,14 +74,15 @@ header {
 				color: white;
 			}
 		}
-
+		/*
 		@media screen and (min-width: 800px) {
 			display: block;
 		}
+		*/
 	}
 
 	.burger {
-		display: block;
+		display: none;
 		position: relative;
 		top: -6px;
 		padding-left: 30px;
@@ -97,10 +97,10 @@ header {
 			background: white;
 			box-shadow: 0 12px 0 0 white, 0 6px 0 0 white;
 		}
-
+		/*
 		@media screen and (min-width: 800px) {
 			display: none;
-		}
+		}*/
 	}
 
 	.donate-link {
@@ -126,6 +126,8 @@ header {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+	height: 50vh; /* Set the height to 100% of the viewport height */
+    margin: 0; 
 }
 form{
     display: grid;
@@ -177,9 +179,11 @@ p{
 
 .footer {
     position: relative;
-    padding: 30px 0;
+	width: 100%;
+    padding: 1rem;
     font-family: 'Play', sans-serif;
     text-align: center;
+	margin-top: 7%;
 }
 
 .footer::before {
@@ -187,17 +191,19 @@ p{
     position: absolute;
     top: 0;
     left: 0;
+	right: 0;
     width: 100%;
     height: 100%;
-    background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/123024/menutexture.png);
-    background-position: center;
-    transform: rotate(180deg);
+	background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/123024/menutexture.png);
+	background-position: center top;
+	transform: rotate(180deg);
+	background-size: auto 250px;
     z-index: -1; 
 }
     
 .footer .row{
     width:100%;
-    margin:1rem;
+    margin:0rem;
     padding:0.6% 0%;
     color:white;
     font-size:0.8em;
@@ -213,31 +219,69 @@ p{
     color:#fff;
     }
     
-    .footer .row ul{
-    width:100%;
-    }
     
-    .footer .row ul li{
-    display:inline-block;
-    margin:0px 30px;
-    }
-    
-.footer .row a i{
+.footer .row a{
     font-size:2em;
     margin:0% 1%;
 }
-    
-@media (max-width:720px){
-    .footer{
-    text-align:left;
-    padding:5%;
+
+/* Mobile Styles */
+@media only screen and (max-width: 767px) {
+    body {
+        font-size: 14px; /* Increase font size for better readability on small screens */
     }
-    .footer .row ul li{
-    display:block;
-    margin:10px 0px;
-    text-align:left;
+
+    header {
+        height: auto; /* Adjust header height for small screens */
+        background-size: auto 200px; /* Adjust background size for better appearance */
+        padding: 10px ; /* Add some padding to the header */
+		width: 105%;
     }
-    .footer .row a i{
-    margin:0% 3%;
+
+    .inner {
+        flex-direction: column;
+        height: auto;
+    }
+
+    .logo {
+		width: 70px;
+        height: 70px;
+    }
+
+    nav a{
+        display: none; 
+    }
+
+    .burger {
+        display: block; /* Display the burger menu icon */
+    }
+
+    .donate-link {
+        position: static;
+        text-align: center;
+        margin-top: 10px; /* Add margin for better spacing */
+    }
+
+    .container {
+        height: auto; /* Adjust container height for small screens */
+    }
+
+    form {
+        width: 90%; /* Adjust form width for better fit on small screens */
+        margin: 2rem auto; /* Center the form */
+    }
+
+    .label,
+    .label2 {
+        margin: 1rem 0;
+    }
+
+    .login {
+        margin-left: 0; /* Adjust margin for better alignment */
+    }
+	
+    .footer::before {
+        background-size: auto 200px; /* Adjust background size for better appearance */
+		width: 100%;
     }
 }
