--- a/templates/CharacterQuestions.html
+++ b/templates/CharacterQuestions.html
@@ -32,7 +32,7 @@
         <div class="QuestionsContainer">
             <div class="questionDoc"></div>
             <div class="Questions">
-                <div class="label2">Answer these Questions: Character</div>
+                <div class="label2">Answer these Questions: Char</div>
                 <form class="questionForm" action="/character_submit" method="post">
                     {% for question in questions %} <!-- Assuming 'questions' is the list you want to iterate over -->
                     <label class="txt" for="question {{ question.id }}">{{ question.question }}</label>
@@ -63,16 +63,6 @@
                             <path d="M12.6.75h2.454l-5.36 6.142L16 15.25h-4.937l-3.867-5.07-4.425 5.07H.316l5.733-6.57L0 .75h5.063l3.495 4.633L12.601.75Zm-.86 13.028h1.36L4.323 2.145H2.865z"/>
                         </svg>
                     </a>
-                </div>
-            
-                <div class="row">
-                    <ul>
-                        <li><a href="#">Contact us</a></li>
-                        <li><a href="#">Our Services</a></li>
-                        <li><a href="#">Privacy Policy</a></li>
-                        <li><a href="#">Terms & Conditions</a></li>
-                        <li><a href="#">Career</a></li>
-                    </ul>
                 </div>
             
                 <div class="row">
