--- a/templates/adminPage.html
+++ b/templates/adminPage.html
@@ -11,55 +11,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="../static/mainPage.css">
-        <style>
-            .accountContainer {
-                margin: 4rem;
-            }
-            .details {
-                padding: 2rem;
-            }
-            .block {
-                margin: 10px;
-            }
-            .row-3 {
-                display: flex;
-            }
-            .col-1, .col-2, .col-3 {
-                flex: 1;
-            }
-            .reports, .questions {
-                padding: 10px;
-                margin-right: 40px;
-                margin-left: 10px;
-            }
-            .row-5, .row-7 {
-                display: flex;
-            }
-            .label2 {
-                font-size: 20px;
-                font-weight: bold;
-            }
-            table{
-                width: 100%;
-            }
-            th {
-                padding: 10px;
-                width: 100px;
-            }
-            tr {
-                height: 30px;  
-                text-align: center;
-            }
-
-            #addQuestionRow #newQuestionText,
-            #addQuestionRow #newDisQuestionText {
-                width: 900px;
-            }
-            #addQuestionRow #newQuestionId,
-            #addQuestionRow #newDisQuestionId {
-                width: 80%;
-            }
-        </style>
+        <link rel="stylesheet" href="../static/adminPage.css">
     </head>
     <body >
 
@@ -128,10 +80,6 @@
                         <span>Character Questions:</span>
                         <hr style="margin-right: 3rem;">
                     </div>
-                    <div class="col-2">
-                        <span>Disorder Questions:</span>
-                        <hr style="margin-right: 3rem;">
-                    </div>
                 </div>
                 <div class="block row-7">
                     <div class="questions col-1">
@@ -156,6 +104,15 @@
                             </tbody>
                         </table>
                     </div>
+                </div>
+
+                <div class="label2 block row-7">
+                    <div class="col-2">
+                        <span>Disorder Questions:</span>
+                        <hr style="margin-right: 3rem;">
+                    </div>
+                </div>
+                <div class="block row-7">
                     <div class="questions col-2">
                         <table border="1" id="DisorderQuestionsTable">
                             <thead>
@@ -202,16 +159,6 @@
                             <path d="M12.6.75h2.454l-5.36 6.142L16 15.25h-4.937l-3.867-5.07-4.425 5.07H.316l5.733-6.57L0 .75h5.063l3.495 4.633L12.601.75Zm-.86 13.028h1.36L4.323 2.145H2.865z"/>
                         </svg>
                     </a>
-                </div>
-            
-                <div class="row">
-                    <ul>
-                        <li><a href="#">Contact us</a></li>
-                        <li><a href="#">Our Services</a></li>
-                        <li><a href="#">Privacy Policy</a></li>
-                        <li><a href="#">Terms & Conditions</a></li>
-                        <li><a href="#">Career</a></li>
-                    </ul>
                 </div>
             
                 <div class="row">
